--- a/Sources/ViewModels/ViewModels.csproj
+++ b/Sources/ViewModels/ViewModels.csproj
@@ -29,4 +29,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Model\Model.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+	</ItemGroup>
 </Project>
